addenda-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addenda-mongo-deployment
  namespace: addenda
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.0.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: hostvol
          mountPath: /data/db
      volumes:
      - name: hostvol
        persistentVolumeClaim:
          claimName: addenda-pv-claim
