addenda-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addenda-node-app
  namespace: addenda
  labels:
        app: addenda-node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: addenda-node-app
  template:
    metadata:
      labels:
        app: addenda-node-app
    spec:
      containers:
      - name: addenda-node-app
        image: developerrohitkhatri/sample-nodejs-api
        ports:
        - containerPort: 3000
