addenda-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: addenda
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    app: mongo
