addenda-node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: addenda-svc
  namespace: addenda
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: addenda-node-app
